--- a/index.html
+++ b/index.html
@@ -3,14 +3,38 @@
     <head>
         <meta charset="utf-8">
         <title>Sticky App</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="material-kit.css">
         <script src="script.js"></script>
     </head>
     <body>
-        <form>
-            <input type="text" id="note_text">
-            <input type="button" id="add_button" value="Add sticky note">
-        </form>
-        <ul id="stickies"></ul>
-    </body>
-</html>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <form>
+                        <label for="note_color" class="label label-default">Color:
+                        </label>
+                        <select id="note_color">
+                            <option value="#FFF176">yellow</option>
+                            <option value="#AED581">green</option>
+                            <option value="#F06292">pink</option>
+                            <option value="#4FC3F7">blue</option>
+                        </select>
+                        <label for="note_text" class="label label-default">Text:
+                        </label>
+                            <input type="text" id="note_text">
+                            <input type="button" class="btn btn-raised btn-primary" id="add_button" value="Add sticky note">
+                        </form>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul id="stickies"></ul>
+                    </div>
+                </div>
+            </div>
+        </body>
+    </html>
